add volume 1hour field
